[package]
name = "imaging_skia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Skia backend for the imaging command stream."
readme = "README.md"
publish = false

[features]
default = []
vulkan = ["dep:ash", "skia-safe/vulkan"]
wgpu = ["dep:wgpu", "dep:foreign-types-shared"]

[dependencies]
foreign-types-shared = { optional = true, version = "0.3" }
imaging = { features = ["std"], workspace = true }
kurbo = { default-features = true, workspace = true }
oaty = "0.1"
peniko = { default-features = true, workspace = true }
skia-safe = { features = ["gl"], version = "0.90.0" }
wgpu = { optional = true, version = "28.0" }

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies]
ash = { version = "^0.38.0", optional = true }
glutin = { version = "0.32.3", features = ["default", "egl"] }
raw-window-handle = "0.6.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = { version = "0.6.3", default-features = false }
objc2-metal = { version = "0.3.2", default-features = false, features = ["MTLCommandQueue", "MTLDevice"] }
skia-safe = { version = "0.90.0", features = ["metal"] }

[lints.rust]
unsafe_code = "allow"
keyword_idents_2024 = "forbid"
non_ascii_idents = "forbid"
non_local_definitions = "forbid"
unsafe_op_in_unsafe_fn = "forbid"

elided_lifetimes_in_paths = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
trivial_numeric_casts = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[lints.clippy]
too_many_arguments = "allow"

allow_attributes_without_reason = "warn"
cast_possible_truncation = "warn"
collection_is_never_read = "warn"
default_trait_access = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
fn_to_numeric_cast_any = "warn"
infinite_loop = "warn"
large_stack_arrays = "warn"
mismatching_type_param_order = "warn"
missing_assert_message = "warn"
missing_fields_in_debug = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
should_panic_without_expect = "warn"
todo = "warn"
unseparated_literal_suffix = "warn"
use_self = "warn"

cargo_common_metadata = "warn"
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "warn"
