[package]
name = "imaging_vello"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Vello (GPU) backend for the imaging command stream."
readme = "README.md"
publish = false

[dependencies]
imaging = { features = ["std"], workspace = true }
imaging_wgpu = { default-features = false, workspace = true }
kurbo = { default-features = true, workspace = true }
peniko = { default-features = true, workspace = true }
vello_07 = { default-features = true, optional = true, package = "vello", version = "0.7.0" }
vello_08 = { default-features = true, optional = true, package = "vello", version = "0.8.0" }

[features]
default = ["vello-0-8"]
vello-0-7 = ["dep:vello_07", "imaging_wgpu/wgpu-27"]
vello-0-8 = ["dep:vello_08", "imaging_wgpu/wgpu-28"]

[dev-dependencies]
pollster = "0.4.0"

[lints]
workspace = true
